recursion.logo.polygonfractal.PolygonFractal.scala.error
Erreur de compilation :
PolygonFractal:9: error: not found: value polygoneFractal
      polygoneFractal(length)
      ^PolygonFractal:10: error: not found: value angle
      droite(angle)
             ^